Des modification dans angular et java